stop logo from making page jump

--- a/files/assets/css/main.css
+++ b/files/assets/css/main.css
@@ -7124,6 +7124,10 @@ body > .container {
 	}
 }
 
+#logo-WPD, #logo-rDrama {
+	height: 100%;
+}
+
 @media (min-width: 1400px) {
 	.awardmodal {
 		max-width: min(90%, 1200px) !important
